# local-second-mind

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile.sandbox  README.md  TODO  __main__.py  design.md  example_config.json  ingest.py  pyproject.toml  query.py
.agents/docs/: ARCHITECTURE.md  CREATE_PLAN.md  INDEX.md  PLAN.md  RELEASE_STATEMENT.md  RESEARCH_PLAN.md
.agents/future_plans/: FINANCE_PROVIDERS.md  RESEARCH_PLAN.md  v_0_8_1_RESEARCH_PLAN.md  v_0_9_0_RESEARCH_PLAN.md
.agents/plan_phases/: PHASE_1.md  PHASE_10.md  PHASE_11.md  PHASE_2.md  PHASE_3.md  PHASE_4.md  PHASE_5.md  PHASE_6.md  PHASE_7.md  PHASE_8.md  PHASE_9.md
.claude_files/: INGEST_FUTURE.md
.claude_files/sandbox_plan/: lsm_agent_sandbox_layered_plan.md  lsm_agent_sandbox_security_test_plan.md  lsm_agent_sandbox_threat_model.md
docs/: ADDING_PROVIDERS.md  AGENTS.md  CHANGELOG.md  NOTES.md  QUERY_MODES.md  README.md  REMOTE_SOURCES.md
docs/api-reference/: ADDING_PROVIDERS.md  CONFIG.md  PROVIDERS.md  REMOTE.md  REPL.md
docs/architecture/: INGEST.md  MODES.md  OVERVIEW.md  PROVIDERS.md  QUERY.md
docs/development/: CHANGELOG.md  PLAN.md  SETUP.md  TESTING.md  TUI_ARCHITECTURE.md
docs/user-guide/: AGENTS.md  CLI_USAGE.md  CONFIGURATION.md  GETTING_STARTED.md  INTEGRATIONS.md  LOCAL_MODELS.md  NOTES.md  QUERY_MODES.md  REMOTE_SOURCES.md  SETUP.md  VECTOR_DATABASES.md
lsm/: __init__.py  __main__.py  logging.py  paths.py  progress.py
lsm/agents/: __init__.py  base.py  curator.py  factory.py  harness.py  interaction.py  log_formatter.py  log_redactor.py  meta.py  models.py  permission_gate.py  phase.py  research.py  scheduler.py  synthesis.py  workspace.py  writing.py
lsm/cli/: __init__.py  shell.py
lsm/commands/: __init__.py  ingest_cmd.py  query_cmd.py
lsm/config/: __init__.py  loader.py  models.py
lsm/db/: __init__.py  clustering.py  compat.py  completion.py  connection.py  enrichment.py  health.py  job_status.py  migration.py  schema.py  schema_version.py  tables.py  transaction.py
lsm/eval/: __init__.py  baselines.py  cli.py  dataset.py  harness.py  metrics.py
lsm/finetune/: __init__.py  embedding.py  registry.py
lsm/gui/: __init__.py
lsm/ingest/: __init__.py  api.py  chroma_store.py  chunking.py  cli.py  commands.py  config.py  dedup_hash.py  display.py  explore.py  fs.py  graph_builder.py  language.py  manifest.py  models.py  parsers.py  pipeline.py  progress.py  repl.py  stats.py  stats_cache.py  structure_chunking.py  summarization.py  tagging.py  translation.py  utils.py
lsm/providers/: __init__.py  anthropic.py  azure_openai.py  base.py  factory.py  gemini.py  helpers.py  local.py  openai.py  openrouter.py
lsm/query/: __init__.py  api.py  cache.py  citations.py  cli.py  commands.py  context.py  cost_tracking.py  decomposition.py  display.py  execution.py  fallback.py  legacy_query.py  multi_hop.py  notes.py  pipeline.py  pipeline_types.py  planning.py  prefilter.py  prompts.py  repl.py  rerank.py  retrieval.py  session.py  synthesis.py
lsm/remote/: __init__.py  base.py  chain.py  chains.py  factory.py  oauth.py  storage.py  utils.py  validation.py
lsm/ui/: __init__.py  utils.py
lsm/utils/: __init__.py  file_graph.py  logger.py  paths.py  text_processing.py
lsm/vectordb/: __init__.py  base.py  chromadb.py  factory.py  postgresql.py  sqlite_vec.py  utils.py
lsm_starter_commit/: README.md  pyproject.toml
lsm_starter_commit/lsm/: __init__.py  __main__.py
scripts/: ensure_test_postgres.sh
tests/: .env.test.example  README.md  __init__.py  conftest.py  test_logging.py  test_main.py  test_package_lazy_exports.py  test_paths.py  testing_config.py
tests/benchmarks/: harness.py  test_benchmarks.py
tests/performance/: test_large_scale.py  test_stress.py
tests/test_agents/: __init__.py  execution_smoke_utils.py  test_agent_end_to_end.py  test_agent_execution_smoke.py  test_agent_helpers.py  test_ask_user_tool.py  test_assistant_agent.py  test_assistant_meta_agent.py  test_base.py  test_calendar_assistant.py  test_context_tracking.py  test_curator_agent.py  test_curator_memory_mode.py  test_harness.py  (+50 more)
(+606 files in other folders)
