[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsm"
version = "0.1.0"
description = "Local Second Mind CLI"
requires-python = ">=3.10"

# Keep deps unpinned here; your existing environment already has these.
dependencies = [
  "chromadb",
  "sentence-transformers",
  "PyMuPDF",
  "python-docx",
  "beautifulsoup4",
  "lxml",
  "pyyaml",
  "openai",
]

[project.scripts]
lsm = "lsm.__main__:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["lsm*"]
