[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsm"
version = "0.2.0"
description = "Local Second Mind CLI"
requires-python = ">=3.10"

# Keep deps unpinned here; your existing environment already has these.
dependencies = [
  "chromadb",
  "sentence-transformers",
  "PyMuPDF",
  "python-docx",
  "beautifulsoup4",
  "lxml",
  "pyyaml",
  "openai",
  "python-dotenv",
  "pytesseract",  # For OCR support
  "Pillow",       # For image handling
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "pytest-mock>=3.10",
]

[project.scripts]
lsm = "lsm.__main__:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["lsm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=lsm",
    "--cov-report=term-missing",
    "--cov-report=html",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["lsm"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
