[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsm"
version = "0.4.0"
description = "Local Second Mind CLI"
requires-python = ">=3.10"

# Keep deps unpinned here; your existing environment already has these.
dependencies = [
  "chromadb",
  "pgvector",
  "psycopg2",
  "sentence-transformers>=3.0,<6",
  "transformers>=4.41,<5",
  "huggingface-hub>=0.34,<1.0",
  "PyMuPDF",
  "python-docx",
  "beautifulsoup4",
  "lxml",
  "pyyaml",
  "openai",
  "anthropic",
  "google-genai",
  "requests",
  "python-dotenv",
  "pytesseract",  # For OCR support
  "Pillow",       # For image handling
  "textual",
  "langdetect",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "pytest-mock>=3.10",
  "textual-dev",
]

[project.scripts]
lsm = "lsm.__main__:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["lsm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "smoke: fast tests with lightweight fakes and no live services",
    "integration: integration-level tests that exercise multi-module flows",
    "live: tests that make real external API/network calls",
    "live_llm: live tests for LLM provider APIs",
    "live_remote: live tests for remote source providers",
    "docker: tests that require Docker",
    "performance: performance and stress tests",
]
addopts = [
    "--verbose",
    "-m",
    "not live and not docker",
    "--cov=lsm",
    "--cov-report=term-missing",
    "--cov-report=html",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["lsm"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
